fixing security