@@ -1,6 +1,5 @@
 package org.example.helloevents.Services;
 
-import lombok.AllArgsConstructor;
 import org.example.helloevents.DTO.ClientDto;
 import org.example.helloevents.Models.Client;
 import org.example.helloevents.Repositories.ClientRepository;
@@ -8,43 +7,46 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
+//@AllArgsConstructor
 public class ClientService {
     private final ClientRepository clientRepository;
     private final ModelMapper modelMapper;
-    public ClientDto addClient(ClientDto clientDto) {
-        Client client = modelMapper.map(clientDto,Client.class);
-        Client savedClient = clientRepository.save(client);
-        return modelMapper.map(savedClient, ClientDto.class);
-    }
-    public ClientDto getClientById(Long id) {
-        Optional<Client> client = clientRepository.findById(id);
-        return modelMapper.map(client, ClientDto.class);
+
+    public ClientService(ClientRepository clientRepository, ModelMapper modelMapper) {
+        this.clientRepository = clientRepository;
+        this.modelMapper = modelMapper;
     }
 
-    public List<ClientDto> getAllClients() {
-        List<Client> clients = (List<Client>) clientRepository.findAll();
+    public ClientDto save(ClientDto clientDto) {
+        Client client=modelMapper.map(clientDto,Client.class);
+        Client saved =clientRepository.save(client);
+        return modelMapper.map(saved,ClientDto.class);
+    }
+    public List<ClientDto> findAll() {
+        List<Client> clients= (List<Client>) clientRepository.findAll();
         return clients.stream()
-                .map(client -> modelMapper.map(client, ClientDto.class))
-                .toList();
+                .map(client->modelMapper
+                        .map(client,ClientDto.class))
+                .collect(Collectors.toList());
     }
-
-    public ClientDto updateClient(Long id, ClientDto clientDto) {
-        Optional<Client> clientOptional = clientRepository.findById(id);
-        if (clientOptional.isPresent()) {
-            Client client = clientOptional.get();
-            client.setUsername(clientDto.getUsername());
-            client.setEmail(clientDto.getEmail());
-            client.setPassword(clientDto.getPassword());
-            Client updatedClient = clientRepository.save(client);
-            return modelMapper.map(updatedClient, ClientDto.class);
-        }
-        return null;
+    public ClientDto findById(Long id) {
+        Client client =clientRepository.findById(id).get();
+        return modelMapper.map(client,ClientDto.class);
     }
-    public void deleteClient(Long id) {
+    public void delete(Long id) {
         clientRepository.deleteById(id);
     }
+    public ClientDto update(Long id, ClientDto clientDto) {
+        Client client = clientRepository.findById(id).get();
+        client.setNom(clientDto.getNom());
+        client.setEmail(clientDto.getEmail());
+        client.setPassword(clientDto.getPassword());
+        Client saved =clientRepository.save(client);
+        return modelMapper.map(saved,ClientDto.class);
+
+    }
 }
+
